--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
 
       </section>
       <footer>
-        <p>The html can now be customized to the wishes of <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p>The html of this page can now be customized to the wishes of <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
